# pg253

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README  README.md  docker-compose.yml  grafana-dashboard.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml  docker.yaml  lint.yaml  test.yaml
docker-entrypoint-initdb.d/: init.sql
helm/pg253/: Chart.yaml  grafana-dashboard.json  values.yaml
helm/pg253/templates/: _helpers.tpl  alerting.yaml  cm-grafana.yaml  deployment.yaml  podMonitor.yaml  secret.yaml
pg253/: clientS3.py  cluster.py  configuration.py  metrics.py  remote.py  transfer.py
scripts/dev/: seed.sql
src/pg253/: __main__.py  app.py  cli.py  cluster.py  metrics.py  remote.py  transfer.py  utils.py
tests/: test_metrics.py
tests/integration/: test_integration.py  test_integration_encrypted.py  test_integration_roles.py  test_integration_unencrypted.py
tests/unit/: test_metrics.py  test_remote.py
